# LeanTool

./: .uvignore  CLAUDE.md  LeanTool.lean  README.md  app.py  cli_chat.py  lake-manifest.json  lakefile.lean  lean-api-server-async.py  lean-api-server-fixed.py  lean-api-server-flask.py  leanmcp.py  leantool.py  pbtdp.py  pyproject.toml
LeanTool/: Basic.lean  CheckFalse.lean  __init__.py
examples/: 2025-03-28-alphabeta.markdown  memoBlog.md  sagredo_prompt.txt  style1.txt
leantool/: __init__.py  leanmcp.py
