[project]
name = "leantool"
version = "0.1.0"
description = "LeanTool CLI and MCP server for Lean 4."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Alok Singh", email = "alokbeniwal@gmail.com" }]
dependencies = [
    "litellm>=1.61.7",
    "streamlit>=1.40.1",
    "jsonlines>=4.0.0",
    "pantograph>=0.3.1",
    "flask>=3.1.0",
    "mcp[cli]>=1.3.0",
]

[project.scripts]
leanmcp = "leantool.leanmcp:main"
leantool-chat = "cli_chat:main"
leantool-app = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["leantool"]
