[tool.poetry]
name = "leantool"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
litellm = "^1.71.0"
streamlit = "^1.40.1"
jsonlines = "^4.0.0"
pantograph = { file = "PyPantograph/dist/pantograph-0.3.0-cp310-cp310-manylinux_2_31_x86_64.whl" }
flask = "^3.1.0"
mcp = {extras = ["cli"], version = "^1.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
