[project]
name = "leantool"
version = "0.1.0"
description = ""
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.71.0",
    "streamlit>=1.40.1",
    "jsonlines>=4.0.0",
    "flask>=3.1.0",
    "mcp[cli]>=1.3.0",
    "pexpect>=4.9.0",
    "pantograph",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pantograph = { path = "pypantograph/dist/pantograph-0.2.25-cp312-cp312-macosx_15_0_arm64.whl" }

